zeit.imp changes
================

0.4 (unreleased)
++++++++++++++++

- Es stehen mehrere Rahmenfarben zur Auswahl, die per XML-Datei anpassbar sind
  (colors.xml).
- Markierung auf den Slidern entfernt.

0.3 (2009-02-05)
++++++++++++++++

- Selenium-Infrastruktur wurde in den Kern verschoben.
- Bei einem zu kleinen Bildschirm konnten keine Bilder zugeschnitten werden,
  weil die Bilderleiste sich über den Knopf gelegt hatte. Bei kleinen
  Bildschirmen funktioniert es jetzt, sieht aber nicht schön aus (Bug #4651).

0.2 (2009-01-22)
++++++++++++++++

- Anpassen der Bildposition etc, wenn das Browserfenster die Größe ändert oder
  die Seitenleiste ein- oder ausgefahren wird.
- Extra Berechtigung für das Benutzen.
- Regler für Helligkeit, Kontrast, Schärfe und Farbe.

0.1 (2009-01-19)
++++++++++++++++

- erstes Release.